--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ button:hover {
   }
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (min-width: 375px) {
   .container {
     margin: 10px;
     width: 23rem;
